[gd_scene load_steps=15 format=2]

[ext_resource path="res://themes/font_standard.tres" type="DynamicFont" id=1]
[ext_resource path="res://themes/font_headers2.tres" type="DynamicFont" id=2]
[ext_resource path="res://textures/effects/other/glow.png" type="Texture" id=3]
[ext_resource path="res://themes/save_load_theme.tres" type="Theme" id=4]
[ext_resource path="res://textures/gui/soul.png" type="Texture" id=5]
[ext_resource path="res://scripts/menu/export.gd" type="Script" id=6]
[ext_resource path="res://textures/gui/save_bg_effect.tres" type="Texture" id=7]
[ext_resource path="res://textures/blocks/meteorit.png" type="Texture" id=8]
[ext_resource path="res://sounds/music/menu/save_load.ogg" type="AudioStream" id=9]
[ext_resource path="res://textures/gui/save_bg_player.tres" type="Texture" id=10]
[ext_resource path="res://scripts/menu/save_loader.gd" type="Script" id=11]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("center/all:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("center/all/save_bg_effect:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 258.236, 1.12762 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("center/all/save_bg_effect2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 292.697, 19.1073 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("center/all/save_bg_effect3:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 214.785, 26.5989 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("center/all/glow:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 34.5077, 8.64194 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("center/all:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "moving"
length = 50.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("center/all:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 15, 30, 45.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -16, -14 ), Vector2( 8.85714, -18 ), Vector2( -4.00714, 9.95002 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("center/all/save_bg_effect:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 15, 30, 45.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 258.236, 1.12762 ), Vector2( 298.236, -22.8724 ), Vector2( 213.093, -24.5866 ), Vector2( 258.079, 7.34192 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("center/all/save_bg_effect2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 15, 30, 45.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 292.697, 19.1073 ), Vector2( 284.697, 63.1073 ), Vector2( 292.126, 18.2502 ), Vector2( 312.569, 24.9144 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("center/all/save_bg_effect3:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 15, 30, 45.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 214.785, 26.5989 ), Vector2( 174.785, -23.4011 ), Vector2( 175.928, 46.0275 ), Vector2( 206.042, 34.9703 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("center/all/glow:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 15, 30, 45.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 34.5077, 8.64194 ), Vector2( 30.7877, 8.64194 ), Vector2( 34.822, 9.56195 ), Vector2( 34.4584, 8.48895 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("center/all:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 2.2, 4.7, 7.1, 9.9, 12.7, 15, 19, 24.4, 28.6, 32.7, 36.8, 41, 45.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.6, 0.6, 0.6, 1 ), Color( 1, 1, 1, 1 ), Color( 0.596078, 0.596078, 0.596078, 1 ), Color( 1, 1, 1, 1 ), Color( 0.462745, 0.462745, 0.462745, 1 ), Color( 1, 1, 1, 1 ), Color( 0.541176, 0.541176, 0.541176, 1 ), Color( 1, 1, 1, 1 ), Color( 0.552941, 0.552941, 0.552941, 1 ), Color( 1, 1, 1, 1 ), Color( 0.513726, 0.513726, 0.513726, 1 ), Color( 1, 1, 1, 1 ), Color( 0.67451, 0.67451, 0.67451, 1 ) ]
}

[sub_resource type="ButtonGroup" id=3]

[node name="save_loader" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 11 )

[node name="tint" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="center" type="Control" parent="tint"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="all" type="Node2D" parent="tint/center"]

[node name="glow" type="Sprite" parent="tint/center/all"]
self_modulate = Color( 0, 0.0627451, 1, 0.227451 )
position = Vector2( 228.258, 133.484 )
scale = Vector2( 34.5077, 8.64194 )
texture = ExtResource( 3 )

[node name="player" type="Sprite" parent="tint/center/all"]
self_modulate = Color( 0, 0, 0.584314, 1 )
position = Vector2( -174.07, 21.8122 )
texture = ExtResource( 10 )

[node name="meteorit" type="Sprite" parent="tint/center/all"]
modulate = Color( 0, 0.341176, 0.541176, 1 )
position = Vector2( 238.758, 11.6158 )
scale = Vector2( 2, 2 )
texture = ExtResource( 8 )

[node name="save_bg_effect" type="Sprite" parent="tint/center/all"]
self_modulate = Color( 0, 0, 1, 0.192157 )
position = Vector2( 258.236, 1.12762 )
texture = ExtResource( 7 )

[node name="save_bg_effect2" type="Sprite" parent="tint/center/all"]
self_modulate = Color( 0, 0.862745, 1, 0.192157 )
position = Vector2( 292.697, 19.1073 )
texture = ExtResource( 7 )

[node name="save_bg_effect3" type="Sprite" parent="tint/center/all"]
self_modulate = Color( 1, 1, 1, 0.192157 )
position = Vector2( 214.785, 26.5989 )
texture = ExtResource( 7 )

[node name="anim" type="AnimationPlayer" parent="tint/center/all"]
root_node = NodePath("../../..")
autoplay = "moving"
anims/RESET = SubResource( 2 )
anims/moving = SubResource( 1 )

[node name="saves" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -160.0
margin_right = 256.0
margin_bottom = 160.0
mouse_filter = 1
__meta__ = {
"_editor_description_": ""
}

[node name="empty_text" type="Label" parent="saves"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -181.0
margin_top = -35.0
margin_right = 181.0
margin_bottom = 35.0
custom_colors/font_color = Color( 0.592157, 0.592157, 0.592157, 1 )
text = "sl.nosaves"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="scroll" type="ScrollContainer" parent="saves"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="saves" type="VBoxContainer" parent="saves/scroll"]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text" type="Label" parent="saves"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -235.0
margin_top = -64.0
margin_right = 235.0
margin_bottom = 6.0
custom_fonts/font = ExtResource( 2 )
text = "sl.title"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="create" type="Button" parent="saves"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 126.0
margin_top = 16.0
margin_right = 203.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 1 )
text = "sl.create"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="settings" type="Button" parent="saves"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -49.5
margin_top = 16.0
margin_right = 49.5
margin_bottom = 40.0
custom_fonts/font = ExtResource( 1 )
text = "sl.settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exit" type="Button" parent="saves"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -206.5
margin_top = 16.0
margin_right = -129.5
margin_bottom = 40.0
custom_fonts/font = ExtResource( 1 )
text = "sl.quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="enter" type="Tween" parent="saves"]

[node name="settings" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -160.0
margin_right = 256.0
margin_bottom = 160.0
mouse_filter = 1
__meta__ = {
"_editor_description_": ""
}

[node name="text" type="Label" parent="settings"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -235.0
margin_right = 235.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 2 )
text = "sl.settings"
align = 1
valign = 2

[node name="exit" type="Button" parent="settings"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -38.5
margin_top = -40.0
margin_right = 38.5
margin_bottom = -16.0
custom_fonts/font = ExtResource( 1 )
text = "sl.quit"

[node name="enter" type="Tween" parent="settings"]

[node name="mv" type="Label" parent="settings"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -236.0
margin_top = -76.0
margin_right = -16.0
margin_bottom = -52.0
text = "sl.settings.volm"

[node name="mv_s" type="HSlider" parent="settings"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 20.0
margin_top = -76.0
margin_right = 240.0
margin_bottom = -44.0
max_value = 1.0
step = 0.01
ticks_on_borders = true

[node name="sfxv" type="Label" parent="settings"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -236.0
margin_top = -44.0
margin_right = -16.0
margin_bottom = -20.0
text = "sl.settings.vols"

[node name="sfxv_s" type="HSlider" parent="settings"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 20.0
margin_top = -44.0
margin_right = 240.0
margin_bottom = -12.0
max_value = 1.0
step = 0.01
ticks_on_borders = true

[node name="lang" type="Button" parent="settings"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.5
margin_top = -12.0
margin_right = 76.5
margin_bottom = 12.0
text = "sl.settings.lang"

[node name="exim" type="Button" parent="settings"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.5
margin_top = 12.0
margin_right = 76.5
margin_bottom = 36.0
grow_horizontal = 2
text = "sl.ei"

[node name="more" type="Button" parent="settings"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.5
margin_top = 36.0
margin_right = 76.5
margin_bottom = 60.0
text = "sl.misc.name"

[node name="fullscr" type="CheckButton" parent="settings"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -91.5
margin_top = 84.0
margin_right = 109.5
margin_bottom = 108.0
grow_horizontal = 2
text = "sl.settings.fullscr"

[node name="fps" type="CheckButton" parent="settings"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -110.5
margin_top = 60.0
margin_right = 110.5
margin_bottom = 84.0
grow_horizontal = 2
text = "sl.settings.showfps"
align = 1

[node name="create" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -160.0
margin_right = 256.0
margin_bottom = 160.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="saves" type="VBoxContainer" parent="create"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="header" type="Label" parent="create"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -235.0
margin_right = 235.0
margin_bottom = 70.0
custom_fonts/font = ExtResource( 2 )
text = "sl.create"
align = 1

[node name="gender_text" type="Label" parent="create"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -148.0
margin_top = -43.0
margin_right = -60.0
margin_bottom = -19.0
text = "gender"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="soul_type_text" type="Label" parent="create"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -148.0
margin_top = 16.0
margin_right = 10.0
margin_bottom = 40.0
text = "sl.create.soultrait"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="create" type="Button" parent="create"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 105.5
margin_top = -40.0
margin_right = 182.5
margin_bottom = -16.0
custom_fonts/font = ExtResource( 1 )
text = "sl.create"

[node name="cancel" type="Button" parent="create"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -215.0
margin_top = -40.0
margin_right = -105.0
margin_bottom = -16.0
custom_fonts/font = ExtResource( 1 )
text = "sl.cancel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="LineEdit" parent="create"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -79.0
margin_right = 150.0
margin_bottom = -49.0
max_length = 16
placeholder_text = "Введите имя..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hardcore" type="CheckBox" parent="create"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -17.0
margin_right = -49.0
margin_bottom = 13.0
text = "sl.create.hardcore"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="male" type="CheckBox" parent="create"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -44.0
margin_right = 48.0
margin_bottom = -14.0
pressed = true
group = SubResource( 3 )
text = "gender.male"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="female" type="CheckBox" parent="create"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 54.0
margin_top = -44.0
margin_right = 152.0
margin_bottom = -14.0
group = SubResource( 3 )
text = "gender.female"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="soul_type" type="OptionButton" parent="create"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 20.0
margin_top = 12.0
margin_right = 139.0
margin_bottom = 42.0
text = "trait.bra"
items = [ "trait.bra", null, false, 0, false, "trait.jus", null, false, 1, false, "trait.kin", null, false, 2, false, "trait.pat", null, false, 3, false, "trait.int", null, false, 4, false, "trait.per", null, false, 5, false ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="soul" type="TextureRect" parent="create"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = 60.0
margin_right = 20.0
margin_bottom = 100.0
texture = ExtResource( 5 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="enter" type="Tween" parent="create"]

[node name="enter_color" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="enter" type="Tween" parent="."]

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
autoplay = true
bus = "music"

[node name="delete_window" type="ConfirmationDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -80.0
margin_right = 160.0
margin_bottom = 80.0
rect_min_size = Vector2( 170, 59.5 )
window_title = "sl.delete.title"
dialog_text = "Действительно хочешь удалить сохранение
\"WWWWWWWWWWWWWWWW\"?"
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="confirm_delete_window" type="ConfirmationDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -36.0
margin_right = 160.0
margin_bottom = 36.0
rect_min_size = Vector2( 170, 59.5 )
window_title = "sl.delete.con.title"
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="export" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -360.0
margin_top = -120.0
margin_right = 360.0
margin_bottom = 100.0
window_title = "sl.ei.title"
script = ExtResource( 6 )

[node name="step1" type="Label" parent="export"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -360.0
margin_top = -97.5
margin_right = 360.0
margin_bottom = -46.5
text = "sl.ei.step0"
align = 1
autowrap = true

[node name="give" type="Button" parent="export"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -45.0
margin_top = -72.0
margin_right = 45.0
margin_bottom = -40.0
text = "sl.ei.give"

[node name="step2" type="Label" parent="export"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -360.0
margin_top = -41.5
margin_right = 360.0
margin_bottom = 9.5
text = "sl.ei.step1"
align = 1
autowrap = true

[node name="export" type="Button" parent="export"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -45.0
margin_top = 16.0
margin_right = 57.0
margin_bottom = 48.0
text = "sl.ei.export"

[node name="step3" type="Label" parent="export"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -360.0
margin_top = 46.5
margin_right = 360.0
margin_bottom = 97.5
text = "sl.ei.step2"
align = 1
autowrap = true

[node name="import" type="Button" parent="export"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -45.0
margin_top = 72.0
margin_right = 54.0
margin_bottom = 104.0
text = "sl.ei.import"

[node name="misc" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -120.0
margin_right = 300.0
margin_bottom = 180.0
window_title = "sl.misc.name"

[node name="remove" type="Button" parent="misc"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -66.0
margin_top = -44.0
margin_right = 66.0
margin_bottom = -20.0
grow_horizontal = 2
text = "sl.misc.remove"

[node name="check_upd" type="CheckButton" parent="misc"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -24.0
margin_top = -140.0
margin_right = 168.0
margin_bottom = -116.0
grow_horizontal = 0
text = "sl.misc.check.upd"

[node name="check_beta" type="CheckButton" parent="misc"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -72.0
margin_top = -108.0
margin_right = 168.0
margin_bottom = -84.0
grow_horizontal = 0
text = "sl.misc.check.upd.beta"

[node name="check_patch" type="CheckButton" parent="misc"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -46.0
margin_top = -76.0
margin_right = 168.0
margin_bottom = -52.0
grow_horizontal = 0
text = "sl.misc.check.patch"

[node name="note" type="Label" parent="misc"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -270.0
margin_top = -160.0
margin_right = 270.0
margin_bottom = -16.0
text = "sl.misc.remove.note"
align = 1
autowrap = true

[connection signal="pressed" from="saves/create" to="." method="enter_create"]
[connection signal="pressed" from="saves/settings" to="." method="enter_settings"]
[connection signal="pressed" from="saves/exit" to="." method="quit"]
[connection signal="pressed" from="settings/exit" to="." method="cancel_settings"]
[connection signal="pressed" from="settings/lang" to="." method="lang"]
[connection signal="pressed" from="settings/exim" to="export" method="popup_centered"]
[connection signal="pressed" from="settings/more" to="misc" method="popup_centered"]
[connection signal="toggled" from="settings/fps" to="." method="fps_button_changed"]
[connection signal="pressed" from="create/create" to="." method="create"]
[connection signal="pressed" from="create/cancel" to="." method="cancel_create"]
[connection signal="confirmed" from="delete_window" to="." method="preconfirm_delete"]
[connection signal="confirmed" from="confirm_delete_window" to="." method="confirm_delete"]
[connection signal="pressed" from="export/give" to="export" method="request"]
[connection signal="pressed" from="export/export" to="export" method="export_file"]
[connection signal="pressed" from="export/import" to="export" method="import_file"]
[connection signal="pressed" from="misc/remove" to="." method="remove_patches"]
